Bug 54178 - Weborder: Item quantity button overlaps with modifier price for items with long name

--- a/skins/weborder/css/product_sets.css
+++ b/skins/weborder/css/product_sets.css
@@ -3,6 +3,7 @@
 }
 
 .combo_item .title {
+    max-width: 280px;
     cursor: pointer;
 }
 
